Fix h1 hero alignment

--- a/src/styles/_slides.sass
+++ b/src/styles/_slides.sass
@@ -6,7 +6,6 @@
 
   .fade-out
     opacity: 0
-    // z-index: -1
 
   .slide-inner
     position: absolute
@@ -45,12 +44,10 @@
 
   svg#TBR
     width: 17%
-    // padding-left: 23%
   svg#lightening
     width: 2%
     margin: 0 auto
     display: block
-    // padding-left: 23%
 
 .centered-content
   position: absolute
@@ -63,6 +60,7 @@
   text-align: center
   h1
     font-size: 10vw
+    padding-right: 41px
   button
     width: 200px
     height: 50px
@@ -83,8 +81,6 @@
 
 #about .slide-inner
   background-image: url('/images/the-born-readies-about.jpg')
-  h1
-    padding-right: 41px
   section
     .who-we-are, .press-kit
       height: 100%
